fix.FeedEntity Comment